--- a/test/fixtures/provinces.yml
+++ b/test/fixtures/provinces.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  province_id: 1
   name: MyString
 
 two:
+  province_id: 1
   name: MyString
